EKS/Video_61/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-deployment-fargate
  annotations: 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Cambiaron las subnets y ahora son menos. Ver Networking de tu cluster, hubo que eliminar
    # un par de subnets por estar en zonas de disponibilidad repetidas
    alb.ingress.kubernetes.io/subnets: subnet-09ec1c3fca534769b, subnet-0bfdb1b3e5dc90816 
    # external-dns.alpha.kubernetes.io/hostname: prueba.curso-prueba.com
spec: 
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-fargate
            port:
              number: 80


# subnet-078a3a100500150ca subnet-040c26fe11be052b3
